fix subscribe button on iOS

--- a/css/newsletter_signup.less
+++ b/css/newsletter_signup.less
@@ -11,6 +11,9 @@
   vertical-align:top;
   font-family: @sans-serif;
   cursor: pointer;
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
+  border-radius: 0;
 }
 
 .font-weight-normal {
@@ -27,4 +30,3 @@
   height:2em;
   vertical-align:top;
 }
-
